@@ -1,13 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST rails_autolink-1.0.5.gem 10752 RMD160 63f13c5903abfc9c2086136ec02f60a4821ee6f4 SHA1 dee6adb7af6d444cd80566fbbe9abb6230d62541 SHA256 a13de3095060f93af9b4755e9b48305bd6457f22f60bce7dfbe0c23757bd8209
-DIST rails_autolink-1.0.6.gem 11264 RMD160 b49536d81255aeb1999200f8a9aa25453a17928a SHA1 a69091aeba5ce725dc62bdfaefab0b1fd76d722c SHA256 aab26a973b71196db142cd0b8259e74da8039cd82d958a6ffdedd5f39bad0dfd
-DIST rails_autolink-1.0.7.gem 11264 RMD160 23d37d05596e089e72e3228d3251e790be2a0de6 SHA1 160a042fb15e775e661c5233518a125d21155701 SHA256 002b162b2c43eaf5727422928f5e93d12c7bf2df6f446a4189a9c57b9b278382
+DIST rails_autolink-1.0.7.gem 11264 SHA256 002b162b2c43eaf5727422928f5e93d12c7bf2df6f446a4189a9c57b9b278382 SHA512 4586889d65f4911868f3ebc0574dd3eddadb96199155384951d097c103a69da7eceb4184503b52ffa09a7339c5ed486b9f38788fefee273feb541bcd09c1e9ff WHIRLPOOL 136672d5183f59b767c05719c65a7001fe3b3b01d4f56b1c929c5263e8e6936b89186b4c2965a6715b05c2ed692630817d2180a906ca06d16018fcb450344477
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk+8f7QACgkQiIP6VqMIqNdhUwD/WkBxWdhkKxsDjXgEz18BkHz1
-PyplpdUbz9fcB3sLC9YA/RdGf8yqGo3VbRJAi88zm5BRRC+Ynf35x+1YVtTgLsfy
-=A7WN
+iF4EAREIAAYFAlAJN58ACgkQiIP6VqMIqNe/lQD8C9FiHHfKxHV1Mg5lOw3g4rHr
+wj3h5voPw4f7ySL/jXAA/3lTymVNk/3e28rtqCYvWgjYu+MNHg3Y8NbFxMz/+Nfz
+=9pGf
 -----END PGP SIGNATURE-----
