@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> -rails_autolink-1.0.5.ebuild,
+  -rails_autolink-1.0.6.ebuild:
+  Remove old versions.
+
 *rails_autolink-1.0.7 (23 May 2012)
 
   23 May 2012; Hans de Graaff <graaff@gentoo.org> +rails_autolink-1.0.7.ebuild:
